# TradeStream

./: .dockerignore  .gitignore  LICENSE  README.md
analytics/: CMakeLists.txt
analytics/src/: main.cpp
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bfbb9d4bc131_init_schema.py
backend/app/: main.py
backend/app/api/: routes_users.py  routes_vwap_ws.py
backend/app/core/: config.py  logger.py
backend/app/db/: models.py  session.py
backend/app/schemas/: response.py  user.py  watchlist.py
backend/app/services/: analytics_consumer.py  user_service.py
backend/app/services/http/: baseline_service.py  health_service.py  user_service.py  watchlist_service.py
backend/app/services/ws/: analytics_broadcaster.py  tick_broadcaster.py  vwap_broadcaster.py
data-pipeline/: consumer_db.py  main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/alerts/: AlertRow.tsx  AlertsCard.tsx
frontend/components/dashboard/: ChartCard.tsx  DashboardPage.tsx  MetricCard.tsx  MetricGrid.tsx  StreamPanel.tsx
frontend/components/layout/: BackgroundGlow.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/watchlist/: WatchlistCard.tsx  WatchlistRow.tsx
frontend/hooks/: useAnalyticsData.ts  useDashboardData.ts  useMarketData.ts  useSystemHealth.ts
frontend/lib/: dashboardData.ts
shared/: symbols.py
